fix too big logo

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,6 +22,7 @@ header {
 }
 
 .logo {
+    width: 80px;
     cursor: pointer;
 }
 .nav__links {
